# media-free

./: .gitignore  API.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
awesome-zhuiju-desktop/: components.json  package.json  pnpm-lock.yaml  vite.config.ts
awesome-zhuiju-desktop/src/: App.css  App.tsx  types.ts
awesome-zhuiju-desktop/src-tauri/: Cargo.toml
awesome-zhuiju-desktop/src-tauri/src/: client.rs  lib.rs  mapping.rs  models.rs  parser.rs
awesome-zhuiju-desktop/src/components/: DetailView.tsx  EpisodeGrid.tsx  ErrorBoundary.tsx  ImgWithFallback.tsx  MiniComponents.tsx  Toast.tsx  VideoPlayer.tsx
awesome-zhuiju-desktop/src/lib/: api.ts  utils.ts
reports/: availability.json  verifications.json
resources/: README.md  resources.json  schema.json
scripts/: check-availability.mjs  sync-readme.mjs  validate-data.mjs
src/: App.css  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: categories.rs  client.rs  danmaku_cache.rs  danmu_server.rs  detail.rs  lib.rs  main.rs  mapping.rs  models.rs  parser.rs  proxy.rs  search.rs  sources.rs
src-tauri/src/source_handlers/: apple_cms.rs  duanju.rs  feifan.rs  hongniu.rs  mod.rs  quantum.rs
src/components/: CategoryFilter.tsx  DetailView.tsx  DetailWindow.tsx  EpisodeGrid.tsx  ProxiedImg.tsx  SearchBar.tsx  SearchView.tsx  SidebarMenu.tsx  SourceTabs.tsx  Toast.tsx  VideoPlayer.tsx
src/components/ui/: card.tsx
src/lib/: api.ts  utils.ts
