[package]
name = "awesome-zhuiju-desktop"
version = "0.1.0"
description = "追剧资源桌面端"
authors = ["you"]
edition = "2021"

[lib]
name = "awesome_zhuiju_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
quick-xml = { version = "0.36", features = ["serialize"] }
url = "2"
regex = "1"
